Fixes to profile
- JS, html, css minification
- load print.css using media='print' and created a new style-screen.css
and referenced using media='screen'
- inline css
- moved analytics JS to the footer
- Loading google fonts using Async
- re-sizing, compressing images

--- a/udprofile/project-2048.html
+++ b/udprofile/project-2048.html
@@ -10,9 +10,9 @@
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
     <!-- <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"> -->
 
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/print.css" rel="stylesheet">
-
+    <link href="css/style.min.css" rel="stylesheet">
+    <link href="css/style-print.min.css" rel="stylesheet" media="print">
+    <link href="css/style-screen.min.css" rel="stylesheet" media="screen">
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
       w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
@@ -21,8 +21,6 @@
       ga('create', 'UA-XXXX-Y');
       ga('send', 'pageview');
     </script>
-    <script src="//www.google-analytics.com/analytics.js"></script>
-    <script src="js/perfmatters.js"></script>
   </head>
 
   <body>
@@ -38,7 +36,7 @@
 
       <div class="content">
 
-        <img class="img-responsive" src="http://cameronwp.github.io/udportfolio/img/2048.png">
+        <img class="img-responsive" src="img/2048-small.png">
 
         <p>Bacon ipsum dolor sit amet et pork belly porchetta excepteur dolor, laborum laboris magna labore dolore in fugiat beef ribs. Fugiat leberkas nulla do kevin dolore. Flank hamburger dolor swine prosciutto sirloin pig jerky sunt consequat pariatur. Mollit meatloaf nostrud laboris shoulder excepteur velit officia meatball nisi turkey. Nulla jowl spare ribs, et drumstick magna frankfurter.</p>
 
@@ -50,4 +48,6 @@
       <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
     </footer>
   </body>
+  <script src="//www.google-analytics.com/analytics.js" async></script>
+  <script src="js/main.min.js" async></script>
 </html>
