--- a/udprofile/index.html
+++ b/udprofile/index.html
@@ -6,13 +6,10 @@
     <meta name="description" content=" FILL ME IN ">
     <meta name="author" content=" FILL ME IN ">
     <title>Cameron Pittman: Portfolio</title>
-
-    <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
-
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/print.css" rel="stylesheet">
-
+    <link href="css/style-print.min.css" rel="stylesheet" media="print">
+    <link href="css/style-screen.min.css" rel="stylesheet" media="screen">
+    <link href="css/style.min.css" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" async>
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
       w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
@@ -21,10 +18,7 @@
       ga('create', 'UA-XXXX-Y');
       ga('send', 'pageview');
     </script>
-    <script src="http://www.google-analytics.com/analytics.js"></script>
-    <script async src="js/perfmatters.js"></script>
   </head>
-
   <body>
     <header>
       <a href="/"><img src="img/profilepic.jpg"></a>
@@ -43,7 +37,6 @@
             <a href="project-2048.html">Build Your Own 2048!</a>
             <p>I made my own version of 2048. How cool is that!?</p>
           </li>
-
           <li>
             <img src="https://lh6.ggpht.com/f_0W8h__3G99CWTjnMjD8BUKm7yp2-wJyApLtTwFoFtlal2ULf_JgHIsOQq2NiYfKOdMlXlMHDKNo5XVZLs=s100">
             <a href="project-webperf.html">Website Performance Optimization</a>
@@ -57,7 +50,7 @@
           </li>
 
           <li>
-            <img style="width: 100px;" src="views/images/pizzeria.jpg">
+            <img style="width: 100px;" src="views/images/pizzeria-small.jpg">
             <a href="views/pizza.html">Cam's Pizzeria</a>
             <p>Who wants a performant pizza?</p>
           </li>
@@ -68,4 +61,6 @@
       <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
     </footer>
   </body>
+  <script src="http://www.google-analytics.com/analytics.js" async></script>
+  <script src="js/main.min.js" async></script>
 </html>
