--- a/udprofile/project-mobile.html
+++ b/udprofile/project-mobile.html
@@ -10,9 +10,9 @@
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
     <!-- <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"> -->
 
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/print.css" rel="stylesheet">
-
+    <link href="css/style.min.css" rel="stylesheet">
+    <link href="css/style-print.min.css" rel="stylesheet" media="print">
+    <link href="css/style-screen.min.css" rel="stylesheet" media="screen">
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
       w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
@@ -21,8 +21,6 @@
       ga('create', 'UA-XXXX-Y');
       ga('send', 'pageview');
     </script>
-    <script src="http://www.google-analytics.com/analytics.js"></script>
-    <script async src="js/perfmatters.js"></script>
   </head>
 
   <body>
@@ -37,10 +35,14 @@
       </div>
 
       <div class="content">
-        
+
         <p>Bacon ipsum dolor sit amet et pork belly porchetta excepteur dolor, laborum laboris magna labore dolore in fugiat beef ribs. Fugiat leberkas nulla do kevin dolore. Flank hamburger dolor swine prosciutto sirloin pig jerky sunt consequat pariatur. Mollit meatloaf nostrud laboris shoulder excepteur velit officia meatball nisi turkey. Nulla jowl spare ribs, et drumstick magna frankfurter.</p>
 
-        <img src="img/mobilewebdev.jpg">
+        <picture>
+          <source srcset="img/mobilewebdev-small.jpg" media="(min-width: 400px)"/>
+          <img src="img/mobilewebdev-medium.jpg" srcset="img/mobilewebdev-medium.jpg">
+        </picture>
+
 
         <p>Venison spare ribs dolor tri-tip duis turkey. Ut chicken proident ribeye est flank, sed frankfurter. Kielbasa exercitation ullamco leberkas. Landjaeger turkey culpa, tail short loin consectetur salami venison in corned beef eiusmod qui ad leberkas. Tri-tip adipisicing frankfurter ut sirloin rump consectetur. Chuck sint filet mignon labore eiusmod nulla. Venison shankle pork, consectetur nisi bacon spare ribs anim meatball sausage ball tip labore aute reprehenderit adipisicing.</p>
 
@@ -50,4 +52,6 @@
       <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
     </footer>
   </body>
+  <script src="http://www.google-analytics.com/analytics.js" async></script>
+  <script src="js/main.min.js" async></script>
 </html>
