improved 2d animations+dynamically adding link attribute

--- a/udprofile/project-2048.html
+++ b/udprofile/project-2048.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta name=viewport content="width=device-width, initial-scale=1"><meta name=description content="FILL ME IN"><meta name=author content="FILL ME IN"><title>Cameron Pittman: Portfolio</title><style>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta name=viewport content="width=device-width, initial-scale=1"><meta name=description content="FILL ME IN"><meta name=author content="Kranthi Kiran"><title>Cameron Pittman: Portfolio</title><style>
 	  html {
 		font-size: 100%;
 		overflow-y: scroll;
@@ -55,4 +55,4 @@
 	  // TODO: replace with your Google Analytics profile ID.
 	  ga('create', 'UA-XXXX-Y');
 	  ga('send', 'pageview');
-    </script></div></body><script src=//www.google-analytics.com/analytics.js async></script><script src=js/main.min.js async></script></html>
+    </script></div></body><script src=http://www.google-analytics.com/analytics.js async></script><script src=js/main.min.js async></script></html>
