--- a/udprofile/project-mobile.html
+++ b/udprofile/project-mobile.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta name=viewport content="width=device-width, initial-scale=1"><meta name=description content="FILL ME IN"><meta name=author content="FILL ME IN"><title>Cameron Pitman: Portfolio</title><style>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta name=viewport content="width=device-width, initial-scale=1"><meta name=description content="FILL ME IN"><meta name=author content="Kranthi Kiran"><title>Cameron Pitman: Portfolio</title><style>
 	  html {
 		font-size: 100%;
 		overflow-y: scroll;
