code review changes to google maps api call and map UI object

--- a/mapproject/index.html
+++ b/mapproject/index.html
@@ -118,4 +118,4 @@
 				window.addEventListener('load', bootStrapCss);
 				window.addEventListener('load', bootStrapThemeCss);
 			}
-		</script><script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrTycjKbwOG8ct7MCvOBagM_baTto6ajQ&callback=init" async defer></script><script language=javascript src=js/lib/jquery-2.1.4.min.js></script><script language=javascript src=js/lib/bootstrap.min.js></script><script language=javascript src=js/lib/knockout-3.4.0.js></script><script language=javascript src=js/foursquare.api.min.js async></script><script language=javascript src=js/main.min.js async></script></body></html>
+		</script><script language=javascript src=js/lib/jquery-2.1.4.min.js></script><script language=javascript src=js/lib/bootstrap.min.js></script><script language=javascript src=js/lib/knockout-3.4.0.js></script><script language=javascript src=js/foursquare.api.min.js async></script><script language=javascript src=js/main.min.js async></script><script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrTycjKbwOG8ct7MCvOBagM_baTto6ajQ&callback=init" onerror async defer></script></body></html>
